delivery-service/delivery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      labels:
        app: delivery-app
    spec:
      containers:
        - name: delivery
          image: tramak/delivery-service:latest
          ports:
            - name: delivery
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shop-service-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: shop-service-persistent-storage
        persistentVolumeClaim:
          claimName: shop-service-pv-claim
