delivery-service/delivery-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-app
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
