delivery-service/delivery-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: delivery.browser
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: delivery-service
              port: 
                number: 8080
